@@ -462,7 +462,10 @@ cdef int _tagMatches(xmlNode* c_node, char* c_href, char* c_name):
 cdef void _removeNode(xmlNode* c_node):
     """Unlink and free a node and subnodes if possible.
     """
+    cdef xmlNode* c_next
+    c_next = c_node.next
     tree.xmlUnlinkNode(c_node)
+    _moveTail(c_next, c_node)
     attemptDeallocation(c_node)
 
 cdef void _moveTail(xmlNode* c_tail, xmlNode* c_target):
@@ -503,8 +506,8 @@ cdef xmlNode* _deleteSlice(xmlNode* c_node, Py_ssize_t start, Py_ssize_t stop):
     while c_node is not NULL and c < stop:
         c_next = c_node.next
         if _isElement(c_node):
-            _removeText(c_node.next)
-            c_next = c_node.next
+            while c_next is not NULL and not _isElement(c_next):
+                c_next = c_next.next
             _removeNode(c_node)
             c = c + 1
         c_node = c_next
@@ -572,16 +575,20 @@ cdef int isutf8py(pystring):
     cdef char* s
     cdef char* c_end
     cdef char c
+    cdef int is_non_ascii
     s = _cstr(pystring)
     c_end = s + python.PyString_GET_SIZE(pystring)
+    is_non_ascii = 0
     while s < c_end:
         c = s[0]
+        if c & 0x80:
+            is_non_ascii = 1
         if c == c'\0':
             return -1 # invalid!
-        if c & 0x80:
-            return 1  # non-ASCII
+        if is_non_ascii == 0 and not tree.xmlIsChar_ch(c):
+            return -1 # invalid!
         s = s + 1
-    return 0          # plain 7-bit ASCII
+    return is_non_ascii
 
 cdef object funicode(char* s):
     cdef Py_ssize_t slen
@@ -602,12 +609,15 @@ cdef object funicode(char* s):
 cdef object _utf8(object s):
     if python.PyString_Check(s):
         assert not isutf8py(s), \
-               "All strings must be Unicode or ASCII"
-        return s
+               "All strings must be XML compatible, either Unicode or ASCII"
     elif python.PyUnicode_Check(s):
-        return python.PyUnicode_AsUTF8String(s)
+        # FIXME: we should test these strings, too ...
+        s = python.PyUnicode_AsUTF8String(s)
+        assert isutf8py(s) != -1, \
+               "All strings must be XML compatible, either Unicode or ASCII"
     else:
         raise TypeError, "Argument must be string or unicode."
+    return s
 
 cdef object _encodeFilename(object filename):
     if filename is None:
